--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
     "enzyme-adapter-react-16": "^1.1.1",
     "jest-enzyme": "^6.0.0",
     "react-test-renderer": "^16.2.0"
-  }
+  },
+  "main": "index.js",
+  "repository": "git@github.com:Ju1111/battleship_frontend.git",
+  "author": "Ju111 <SchneiderJu@gmx.net>",
+  "license": "MIT"
 }
